Update index.html again (why do i even bother)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </script>
     <script>
         // hummus environment 
-        window.CLIENT_ENV = {api:"//hummus.sys42.net/api",api_1:"amberdacutie.github.io",cdn:"hcdn.sys42.net",dis:"notexist",support:"https://notexist",blog:"blog.discordapp.com",domain:"amberdacutie.github.io",env:"production",twitter:"?1",status:"discordstatus.com",crash:"notreal",invite_url:"hummus.sys42.net/invite",stripe_key:"pk_test_51GsU4DAZBpiR6vL6iGHN5kTL3Lbr35S9996qKiktolXgEMWy1MvmSec2FHeu4CKIK0u0BD4xn3K4xAwAryr3kIBK00o8pupGCw",recaptcha_key:"6Leqz9UUAAAAAP5qSNIOiohsP5FFX5a5Ck7Tqp0C",time:1724425346015}
+        window.CLIENT_ENV = {api:"//amberdacutie.github.io/api",api_1:"amberdacutie.github.io",cdn:"amberdacutie.github.io",dis:"notexist",support:"https://notexist",blog:"blog.discordapp.com",domain:"amberdacutie.github.io",env:"production",twitter:"?1",status:"discordstatus.com",crash:"notreal",invite_url:"hummus.sys42.net/invite",stripe_key:"pk_test_51GsU4DAZBpiR6vL6iGHN5kTL3Lbr35S9996qKiktolXgEMWy1MvmSec2FHeu4CKIK0u0BD4xn3K4xAwAryr3kIBK00o8pupGCw",recaptcha_key:"6Leqz9UUAAAAAP5qSNIOiohsP5FFX5a5Ck7Tqp0C",time:1724425346015}
         window.GLOBAL_ENV = {
             API_ENDPOINT: CLIENT_ENV.api,
             WEBAPP_ENDPOINT: '//' + CLIENT_ENV.domain,
